5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1671_1880.log
== TEST (2019-04-29 12:52:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor ineteiro:"))
print(1<=m<=12)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:52:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
print(1<=m<=12)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		"numero de mes invalido"
-- EXECUTION TIME:
0.15419
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.16259
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.283412
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.175799
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.423665
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:02:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.41005
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:03:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m) and (m<=12):
	if(m==1):
		print("janeiro"):
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.150721
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 5
    print("janeiro"):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:04:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
	else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.186304
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
		print("numero de mes invalido")
-- EXECUTION TIME:
0.233373
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
print("numero de mes invalido")
-- EXECUTION TIME:
0.146841
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(1<=m) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.198891
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(m>=1) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.217664
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:06:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(m>=1) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
      print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 11
    print("abril")
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:07:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Valor inteiro:"))
if(m>=1) and (m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.165573
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
